# cpp-projects

ogl-master/misc05_picking/: misc05_picking_BulletPhysics  misc05_picking_custom  misc05_picking_slow_easy
ogl-master/playground/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  playground  playground.cpp  tutorial05_textured_cube
ogl-master/tutorial01_first_window/: tutorial01_first_window
ogl-master/tutorial02_red_triangle/: tutorial02.cpp  tutorial02_red_triangle
ogl-master/tutorial03_matrices/: tutorial03_matrices
ogl-master/tutorial04_colored_cube/: tutorial04.cpp
ogl-master/tutorial05_textured_cube/: tutorial05.cpp
ogl-master/tutorial06_keyboard_and_mouse/: tutorial06_keyboard_and_mouse
ogl-master/tutorial07_model_loading/: tutorial07_model_loading
ogl-master/tutorial08_basic_shading/: tutorial08_basic_shading
ogl-master/tutorial09_vbo_indexing/: tutorial09_several_objects  tutorial09_vbo_indexing
ogl-master/tutorial10_transparency/: tutorial10_transparency
ogl-master/tutorial11_2d_fonts/: tutorial11_2d_fonts
ogl-master/tutorial12_extensions/: tutorial12_extensions
ogl-master/tutorial13_normal_mapping/: tutorial13_normal_mapping
ogl-master/tutorial14_render_to_texture/: tutorial14.cpp  tutorial14_render_to_texture
test_task_artec3d/: CMakeLists.txt  Naive.cpp  README.md  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  getalignresults.cpp  getalignresults.h  mainNaive.cpp  naive.h  settings.h  text_generation.pro  texture.cpp
test_task_artec3d/datas/: world.ply
(+6 files in other folders)
